--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,8 +1,9 @@
 .hdr {
   display: flex;
   justify-content: space-between;
-  padding: 0 5%;
+  padding-left: 10px;
   font-size: 10px;
+  padding-top: 20px;
 }
 
 .btn {
@@ -18,7 +19,7 @@
 }
 
 .icon {
-  padding: 0 5%
+  padding: 0 15px
 }
 
 .profile {
@@ -33,7 +34,8 @@
   height: 35px;
   width: 35px;
   border-radius: 50%;
-  margin: 0 10%
+  margin-left: 10px;
+  margin-right: 10px;
 }
 
 .scrollmenu {
@@ -48,4 +50,27 @@
 
 ul{
   list-style-type: none;
+}
+
+@media only screen and (min-width: 520px ){
+  .hdr {
+    display: flex;
+    justify-content: space-between;
+    padding-right: 20px;
+    padding-left: 20px;
+    font-size: 10px;
+    padding-top: 20px;
+  }
+
+  .profile-photo {
+    height: 35px;
+    width: 35px;
+    border-radius: 50%;
+    margin-left: 10px;
+    margin-right: 10px;
+  }
+
+  .icon {
+    padding: 0 10px
+  }  
 }
