--- a/src/pages/Post/Post.css
+++ b/src/pages/Post/Post.css
@@ -1,5 +1,9 @@
 .post-container {
-  padding: 0 10px;
+  padding: 0 ;
+  max-width: 680px;
+  margin-left: auto;
+  margin-right: auto;
+  width: 100%;
 }
 
 .post-title {
@@ -69,9 +73,7 @@
 }
 
 @media only screen and (min-width: 520px ){
-  .post-container {
-    padding: 0 200px;
-  }
+
 
   .post-title {
     font-family: Georgia, 'Times New Roman', Times, serif;
