--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -6,7 +6,9 @@ body{
 }
 .postsContainer{
   display: flex;
-
+}
+.postsContainer ul{
+  padding-left: 0;
 }
 
 .postsContainer .post-list-center{
@@ -20,4 +22,23 @@ body{
 .post-title-top{
   font-family: medium-content-sans-serif-font, "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", Geneva, Arial, sans-serif !important;
   font-weight: 600;
+}
+
+
+@media screen and (max-width: 597px){
+  
+  .postsContainer{
+    flex-direction: column;
+  }
+  .postsContainer .post-list-center{
+    padding-right: 0;
+  }
+  .Post .Post-image a{
+    width: 80px;
+    height: 72px;
+    min-width: 80px;
+  }
+  .Post .Post-image{
+    max-width: 80px;
+  }
 }
